--- a/kick-off.ipynb
+++ b/kick-off.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOn5VWzbQh9g5940SYOu4jL",
+      "authorship_tag": "ABX9TyOG+ZdImiVrhur29Pr+Q10K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "### 2.1. Bruteforce - $O(n * m * k * 10)$:\n",
         "Với mỗi từ, kiểu tra trên bảng theo hàng ngang và dọc.\n",
         "### 2.2. Hash - Thời gian: $O(n * m * 10)$ - Bộ nhớ $O(n * m * 10)$:\n",
-        "Với độ dài 10 và 26 ký tự khác biệt, ta có thể coi 1 từ như một số có cơ số 26 và độ dài nhiều nhất là 10 (~ $26^{10}$ số khác nhau). Từ đó tính trước tất cả từ có thể tồn tại và sau đó kiểm tra với mỗi từ được cho.\n",
+        "Với độ dài 10 và 26 ký tự khác biệt, ta có thể coi 1 từ như một số có cơ số 26 và độ dài nhiều nhất là 10 ($\\approx 26^{10}$ số khác nhau). Từ đó tính trước tất cả từ có thể tồn tại và sau đó kiểm tra với mỗi từ được cho.\n",
         "### 2.3. Nhận xét thêm - $O(n * m * 10)$ - Bộ nhớ $O(n * m)$:\n",
         "Thay vì ta tính với tất cả độ dài, ta tính với số có độ dài 10 trước, sau đó tính số độ dài 9 bằng cách bỏ đi chữ số đầu hoặc chữ số đuôi, cũng như xoá đi các số đã được tính trước đó, giảm bớt bộ nhớ cần. Khi kiểm tra, ta cũng chia các từ cần kiểm tra theo độ dài.\n",
         "### 3. Code python 3:\n",
@@ -106,8 +106,254 @@
         "# **[True Expression](https://khmt.uit.edu.vn/wecode/algobootcamp/practice/show/89)**\n",
         "## 1. Tóm tắt:\n",
         "Cho dãy N số từ 1 đến N và số nguyên dương S. Hãy thêm dấu \"+\" hoặc \"-\" trước mỗi số để biểu thức được tạo ra có kết quả là S.\n",
+        "## 2. Giải - O(c):\n",
+        "Xét một bài toán tương đương là chọn các số từ 1 đến N để tổng là S. Ta sẽ luôn có cách chọn nếu $0 \\leq S \\leq \\frac{N * (N + 1)}{2}$. Gọi $S_2$ là các số không được chọn, thì $S = \\frac{N * (N + 1)}{2} - S_2$. Ở bài này, thay vì không chọn, ta trừ các số không được chọn, nghĩa là $S = \\frac{N * (N + 1)}{2} - 2 * S_2$. Từ đó suy ra, nếu $S > \\frac{N * (N + 1)}{2}$ hoặc $S$ và $\\frac{N * (N + 1)}{2}$ khác tính chẵn lẻ, đáp án là \"NO_SOLUTION\". Ngược lại, ta có thể biến về bài toán quen thuộc như trên và giải.\n",
+        "## 3. Code python 3:\n",
+        ">```python\n",
+        ">from sys import stdin, stdout\n",
+        ">import math\n",
+        ">\n",
+        ">\n",
+        ">def read(): return stdin.readline().strip()\n",
+        ">def read_int(): return map(int, read().split())\n",
+        ">def write(s): stdout.write(s)\n",
+        ">\n",
+        ">\n",
+        ">n, s = read_int()\n",
+        ">\n",
+        ">if s % 2 != n * (n + 1) // 2 % 2:\n",
+        ">    write(\"NO_SOLUTION\\n\")\n",
+        ">elif n * (n + 1) // 2 < s:\n",
+        ">    write(\"NO_SOLUTION\\n\")\n",
+        ">else:\n",
+        ">    res = ['+' for _ in range(n)]\n",
+        ">    s = (n * (n + 1) // 2 - s) // 2\n",
+        ">    for i in reversed(range(n)):\n",
+        ">        if i < s:\n",
+        ">            s -= i + 1\n",
+        ">            res[i] = '-'\n",
+        ">    write(''.join(res) + '\\n')\n",
+        ">```\n",
+        "# **[Top K Hits](https://khmt.uit.edu.vn/wecode/algobootcamp/practice/show/90)**\n",
+        "## 1. Tóm tắt:\n",
+        "Cho mảng A ban đầu các phần tử là 0. Có 2 thao tác:\n",
+        " - Cộng thêm v vào A\\[l..r\\].\n",
+        " - Xuất ra vị trí k phần tử lớn nhất $k \\leq 5$.\n",
+        "\n",
         "## 2. Giải:\n",
-        "Xét một bài toán tương đương là chọn các số từ 1 đến N để tổng là S. Ta sẽ luôn có cách chọn nếu $0 \\leq S \\leq \\frac{N * (N + 1)}{2}$. Gọi $S_2$ là các số không được chọn, thì $S = \\frac{N * (N + 1)}{2} - S_2$. Ở bài này, thay vì không chọn, ta trừ các số không được chọn, nghĩa là $S = \\frac{N * (N + 1)}{2} - 2 * S_2$"
+        "Segment Tree + Lazy Update - $O(q * log(n))$: Với mỗi đoạn, lưu vị trí k phần tử lớn nhất, từ đó có thể xử lý 2 thao tác trên trong $O(log(n))$.\n",
+        "## 3. Code python 3:\n",
+        ">```python\n",
+        ">from sys import stdin, stdout\n",
+        ">\n",
+        ">\n",
+        ">def read(): return stdin.readline().strip()\n",
+        ">def read_int(): return [int(i) for i in read().split()]\n",
+        ">def write(s): stdout.write(s)\n",
+        ">\n",
+        ">\n",
+        ">n, q = read_int()\n",
+        ">N, B, E = 1 << 16, 1, n\n",
+        ">\n",
+        ">seg = [[] for i in range(N << 1)]\n",
+        ">laz = [0 for i in range(N << 1)]\n",
+        ">\n",
+        ">\n",
+        ">def _upd(i: int, add: int):\n",
+        ">    global seg, laz\n",
+        ">    for id in range(len(seg[i])):\n",
+        ">        seg[i][id] = (seg[i][id][0] + add, seg[i][id][1])\n",
+        ">    laz[i] += add\n",
+        ">\n",
+        ">\n",
+        ">def merge(i: int):\n",
+        ">    global seg, laz\n",
+        ">    seg[i].clear()\n",
+        ">    x, y, i1, i2 = 0, 0, i << 1, i << 1 | 1\n",
+        ">    while len(seg[i]) < 5 and (x < len(seg[i1]) or y < len(seg[i2])):\n",
+        ">        if x == len(seg[i1]):\n",
+        ">            seg[i].append(seg[i2][y])\n",
+        ">            y += 1\n",
+        ">        elif y == len(seg[i2]):\n",
+        ">            seg[i].append(seg[i1][x])\n",
+        ">            x += 1\n",
+        ">        elif seg[i2][y] >= seg[i1][x]:\n",
+        ">            seg[i].append(seg[i2][y])\n",
+        ">            y += 1\n",
+        ">        else:\n",
+        ">            seg[i].append(seg[i1][x])\n",
+        ">            x += 1\n",
+        ">\n",
+        ">\n",
+        ">def push(i: int):\n",
+        ">    global seg, laz\n",
+        ">    i1, i2 = i << 1, (i << 1) | 1\n",
+        ">    _upd(i1, laz[i])\n",
+        ">    _upd(i2, laz[i])\n",
+        ">    merge(i)\n",
+        ">    laz[i] = 0\n",
+        ">\n",
+        ">\n",
+        ">def upd(l: int, r: int, add: int, i: int = 1, b: int = B, e: int = E):\n",
+        ">    global seg, laz\n",
+        ">    if b > r or e < l:\n",
+        ">        return\n",
+        ">    if l <= b and e <= r:\n",
+        ">        _upd(i, add)\n",
+        ">        return\n",
+        ">    if laz[i] != 0:\n",
+        ">        push(i)\n",
+        ">    m = (b + e) >> 1\n",
+        ">    upd(l, r, add, i << 1, b, m)\n",
+        ">    upd(l, r, add, (i << 1) | 1, m + 1, e)\n",
+        ">    merge(i)\n",
+        ">\n",
+        ">\n",
+        ">def build(i: int = 1, b: int = B, e: int = E):\n",
+        ">    global seg, laz\n",
+        ">    if b == e:\n",
+        ">        seg[i] = [(0, b)]\n",
+        ">        return\n",
+        ">    m = (b + e) >> 1\n",
+        ">    build(i << 1, b, m)\n",
+        ">    build((i << 1) | 1, m + 1, e)\n",
+        ">    merge(i)\n",
+        ">\n",
+        ">\n",
+        ">build()\n",
+        ">\n",
+        ">for _ in range(q):\n",
+        ">    t = read_int()\n",
+        ">    if len(t) == 4:\n",
+        ">        _, l, r, v = t\n",
+        ">        upd(l, r, v)\n",
+        ">    else:\n",
+        ">        _, k = t\n",
+        ">        k = min(k, n)\n",
+        ">        for i in range(k):\n",
+        ">            write(str(seg[1][i][1]) + ('\\n' if i == k - 1 else ' '))\n",
+        ">```\n",
+        "# **[Splitting Carrots](https://khmt.uit.edu.vn/wecode/algobootcamp/practice/show/91)**\n",
+        "## 1. Tóm tắt:\n",
+        "Cho N cà rốt, mỗi củ có khối lượng $A_i$, tìm cách lấy ra ít nhất các củ cà rốt sao cho không có cách để chia ra 2 phần có tổng khối lượng bằng nhau.\n",
+        "## 2. Giải:\n",
+        "### 2.1. Bruteforce - $O(3^n)$:\n",
+        "Xét tất cả trường hợp có thể xảy ra bằng cách đánh dấu 0: thuộc phần thứ nhất, 1: thuộc phần thứ 2, 2: bị lấy đi.\n",
+        "### 2.2. Bruteforce + Dynamic Programming - $O(2^n * n^2 * W)$:\n",
+        "Xét trường hợp bằng cách đánh dấu 0: không bị lấy, 1: bị lấy. Ta sẽ có các cấu hình các củ cà rốt còn lại. Dùng Dynamic Programming để tính xem có thể đạt được tổng $\\frac{S}{2}$ với S là tổng khối lượng của cấu hình hiện tại không (bài toán Knapsack).\n",
+        "### 2.3. Nhận xét - $O(n^2 * W)$:\n",
+        "Với trường hợp còn đầy đủ cà rốt, dùng Knapsack để kiểm tra có thể đạt được tổng khối lượng $\\frac{S}{2}$ với S là tổng khối lượng các củ cà rốt. Có 3 trường hợp:\n",
+        " - Không đạt được - không cần lấy bất cứ củ cà rốt nào.\n",
+        " - Đạt được - Tổng S là số chẵn và tồn tại củ cà rốt có khổi lượng lẻ thì việc lấy củ cà rốt đó sẽ thoả mãn đề bài.\n",
+        " - Đạt được và không tồn tại cà rốt có khổi lượng lẻ - ta có thể chia tất cả củ cà rốt cho 2 mà không thay đổi tính chất bài toán - tới khi tồn tại củ cà rốt có khổi lượng lẻ.\n",
+        "\n",
+        "### 2.4. Tối ưu - $O(\\frac{n^2 * W}{64})$:\n",
+        "Việc xét trường hợp không đóng góp đáng kể vào thời gian chạy, nên bước tính knapsack là tốn thời gian nhất, ta có thể tối ưu bằng dùng bitset ở C++ hoặc dùng một biến int ở python để biểu diễn mảng DP, tốc độ nhanh hơn khoảng $log(10^{18}) \\approx 64$.\n",
+        "## 3. Code python 3:\n",
+        ">```python\n",
+        ">from sys import stdin, stdout\n",
+        ">\n",
+        ">\n",
+        ">def read(): return stdin.readline().strip()\n",
+        ">def read_int(): return [int(i) for i in read().split()]\n",
+        ">def write(s): stdout.write(s)\n",
+        ">\n",
+        ">\n",
+        ">n, = read_int()\n",
+        ">a = read_int()\n",
+        ">\n",
+        ">b = 1\n",
+        ">for v in a:\n",
+        ">    b = b << v | b\n",
+        ">\n",
+        ">s = sum(a)\n",
+        ">if s % 2 == 1:\n",
+        ">    write('0')\n",
+        ">elif b & (1 << (s // 2)) == 0:\n",
+        ">    write('0')\n",
+        ">else:\n",
+        ">    p, v, i = -1, 1000, 0\n",
+        ">    while i < n:\n",
+        ">        c = 0\n",
+        ">        while a[i] % 2 == 0:\n",
+        ">            a[i] //= 2\n",
+        ">            c += 1\n",
+        ">        if c < v:\n",
+        ">            v = c\n",
+        ">            p = i\n",
+        ">        i += 1\n",
+        ">    write('1\\n' + str(p + 1) + '\\n')\n",
+        ">```\n",
+        "# **[Minesweeper](https://khmt.uit.edu.vn/wecode/algobootcamp/practice/show/92)**\n",
+        "## 1. Tóm tắt:\n",
+        "Cho một ma trận chứ thông tin về số lượng bomb ở các ô kề bên (4 ô kề cạnh). Hãy tìm ra ma trận cấu hình bomb (dữ liệu đảm bảo tồn tại đáp án).\n",
+        "## 2. Giải:\n",
+        "### 2.1. Bruteforce - $O(2^{n*m})$:\n",
+        "Xét tất cả cấu hình bomb có thể - mỗi ô có 2 lựa chọn có bomb hoặc không.\n",
+        "### 2.2. Tối ưu:\n",
+        "Tại mỗi ô, gọi u là số lượng bomb kề cạnh chưa tìm ra, v là số lượng ô kề chưa xác định, nếu v bằng 0 - các ô kề chưa xác định không chứa bomb, nếu v bằng u - các ô kề chưa xác định đều chứa bomb. Chạy cho tới khi xác định được tất cả ô.\n",
+        "## 3. Code python 3:\n",
+        ">```python\n",
+        ">from sys import stdin, stdout\n",
+        ">\n",
+        ">\n",
+        ">def read(): return stdin.readline().strip()\n",
+        ">def read_int(): return [int(i) for i in read().split()]\n",
+        ">def write(s): stdout.write(s)\n",
+        ">\n",
+        ">\n",
+        ">def test(i: int, j: int):\n",
+        ">    global near, bomb, n, m, remain\n",
+        ">\n",
+        ">    if i <= 0 or i > n or j <= 0 or j > m:\n",
+        ">        return\n",
+        ">\n",
+        ">    cnt = 0\n",
+        ">    cur = near[i][j]\n",
+        ">    for k in [-1, 1]:\n",
+        ">        cnt += bomb[i + k][j] == -1\n",
+        ">        cnt += bomb[i][j + k] == -1\n",
+        ">        cur -= bomb[i + k][j] == 1\n",
+        ">        cur -= bomb[i][j + k] == 1\n",
+        ">\n",
+        ">    if cnt == 0:\n",
+        ">        return\n",
+        ">\n",
+        ">    if cur == 0:\n",
+        ">        for k in [-1, 1]:\n",
+        ">            if bomb[i + k][j] == -1:\n",
+        ">                bomb[i + k][j] = 0\n",
+        ">                remain -= 1\n",
+        ">            if bomb[i][j + k] == -1:\n",
+        ">                bomb[i][j + k] = 0\n",
+        ">                remain -= 1\n",
+        ">    elif cur == cnt:\n",
+        ">        for k in [-1, 1]:\n",
+        ">            if bomb[i + k][j] == -1:\n",
+        ">                bomb[i + k][j] = 1\n",
+        ">                remain -= 1\n",
+        ">            if bomb[i][j + k] == -1:\n",
+        ">                bomb[i][j + k] = 1\n",
+        ">                remain -= 1\n",
+        ">\n",
+        ">\n",
+        ">n, m = read_int()\n",
+        ">near = [[0 for _ in range(m + 2)]] + [[0] + read_int() + [0]\n",
+        ">                                      for _ in range(n)] + [[0 for _ in range(m + 2)]]\n",
+        ">bomb = [[0 for _ in range(m + 2)]] + \\\n",
+        ">    [[0] + [-1 for _ in range(m)] + [0]\n",
+        ">     for _ in range(n)] + [[0 for _ in range(m + 2)]]\n",
+        ">\n",
+        ">remain = n * m\n",
+        ">while remain > 0:\n",
+        ">    for i in range(1, n + 1):\n",
+        ">        for j in range(1, m + 1):\n",
+        ">            test(i, j)\n",
+        ">\n",
+        ">for i in range(1, n + 1):\n",
+        ">    write(' '.join([str(bomb[i][j]) for j in range(1, m + 1)]) + '\\n')\n",
+        ">\n",
+        ">```\n"
       ]
     }
   ]
