--- a/kick-off.ipynb
+++ b/kick-off.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOG+ZdImiVrhur29Pr+Q10K",
+      "authorship_tag": "ABX9TyMTfA13xa4K1aIXwqpAUwwR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,14 +35,14 @@
       "source": [
         "# **[Hidden Word](https://khmt.uit.edu.vn/wecode/algobootcamp/practice/show/88)**\n",
         "## 1. Tóm tắt\n",
-        "Cho bảng chữ cái $(n*m)$. Xác định với mỗi từ được cho có tồn tại trong bảng hây không (theo hàng và cột).\n",
+        "Cho bảng chữ cái $(n*m)$. Xác định với mỗi từ được cho có tồn tại trong bảng hay không (theo hàng và cột).\n",
         "## 2. Giải\n",
         "### 2.1. Bruteforce - $O(n * m * k * 10)$:\n",
         "Với mỗi từ, kiểu tra trên bảng theo hàng ngang và dọc.\n",
         "### 2.2. Hash - Thời gian: $O(n * m * 10)$ - Bộ nhớ $O(n * m * 10)$:\n",
         "Với độ dài 10 và 26 ký tự khác biệt, ta có thể coi 1 từ như một số có cơ số 26 và độ dài nhiều nhất là 10 ($\\approx 26^{10}$ số khác nhau). Từ đó tính trước tất cả từ có thể tồn tại và sau đó kiểm tra với mỗi từ được cho.\n",
         "### 2.3. Nhận xét thêm - $O(n * m * 10)$ - Bộ nhớ $O(n * m)$:\n",
-        "Thay vì ta tính với tất cả độ dài, ta tính với số có độ dài 10 trước, sau đó tính số độ dài 9 bằng cách bỏ đi chữ số đầu hoặc chữ số đuôi, cũng như xoá đi các số đã được tính trước đó, giảm bớt bộ nhớ cần. Khi kiểm tra, ta cũng chia các từ cần kiểm tra theo độ dài.\n",
+        "Thay vì ta tính với tất cả độ dài, ta tính với số có độ dài 10 trước, sau đó tính số độ dài 9 bằng cách bỏ đi chữ số đầu hoặc chữ số đuôi, cũng như xoá đi các số đã được tính trước đó, giảm bớt bộ nhớ cần thiết. Khi kiểm tra, ta cũng chia các từ cần kiểm tra theo độ dài.\n",
         "### 3. Code python 3:\n",
         ">```python\n",
         ">from sys import stdin, stdout\n",
@@ -107,7 +107,7 @@
         "## 1. Tóm tắt:\n",
         "Cho dãy N số từ 1 đến N và số nguyên dương S. Hãy thêm dấu \"+\" hoặc \"-\" trước mỗi số để biểu thức được tạo ra có kết quả là S.\n",
         "## 2. Giải - O(c):\n",
-        "Xét một bài toán tương đương là chọn các số từ 1 đến N để tổng là S. Ta sẽ luôn có cách chọn nếu $0 \\leq S \\leq \\frac{N * (N + 1)}{2}$. Gọi $S_2$ là các số không được chọn, thì $S = \\frac{N * (N + 1)}{2} - S_2$. Ở bài này, thay vì không chọn, ta trừ các số không được chọn, nghĩa là $S = \\frac{N * (N + 1)}{2} - 2 * S_2$. Từ đó suy ra, nếu $S > \\frac{N * (N + 1)}{2}$ hoặc $S$ và $\\frac{N * (N + 1)}{2}$ khác tính chẵn lẻ, đáp án là \"NO_SOLUTION\". Ngược lại, ta có thể biến về bài toán quen thuộc như trên và giải.\n",
+        "Xét một bài toán tương đương là chọn các số từ 1 đến N có tổng là S. Ta sẽ luôn có cách chọn nếu $0 \\leq S \\leq \\frac{N * (N + 1)}{2}$. Gọi $S_2$ là tổng các số không được chọn, thì $S = \\frac{N * (N + 1)}{2} - S_2$. Ở bài này, thay vì không chọn, ta trừ các số không được chọn, nghĩa là $S = \\frac{N * (N + 1)}{2} - 2 * S_2$. Từ đó suy ra, nếu $S > \\frac{N * (N + 1)}{2}$ hoặc $S$ và $\\frac{N * (N + 1)}{2}$ khác tính chẵn lẻ, đáp án là \"NO_SOLUTION\". Ngược lại, ta có thể biến về bài toán quen thuộc như trên và giải.\n",
         "## 3. Code python 3:\n",
         ">```python\n",
         ">from sys import stdin, stdout\n",
@@ -141,7 +141,7 @@
         " - Xuất ra vị trí k phần tử lớn nhất $k \\leq 5$.\n",
         "\n",
         "## 2. Giải:\n",
-        "Segment Tree + Lazy Update - $O(q * log(n))$: Với mỗi đoạn, lưu vị trí k phần tử lớn nhất, từ đó có thể xử lý 2 thao tác trên trong $O(log(n))$.\n",
+        "Segment Tree + Lazy Update - $O(q * log(n))$: Với mỗi đoạn, lưu vị trí k phần tử lớn nhất, từ đó có thể xử lý mỗi thao tác thuộc 2 loại trên trong $O(log(n))$.\n",
         "## 3. Code python 3:\n",
         ">```python\n",
         ">from sys import stdin, stdout\n",
@@ -245,7 +245,7 @@
         "Với trường hợp còn đầy đủ cà rốt, dùng Knapsack để kiểm tra có thể đạt được tổng khối lượng $\\frac{S}{2}$ với S là tổng khối lượng các củ cà rốt. Có 3 trường hợp:\n",
         " - Không đạt được - không cần lấy bất cứ củ cà rốt nào.\n",
         " - Đạt được - Tổng S là số chẵn và tồn tại củ cà rốt có khổi lượng lẻ thì việc lấy củ cà rốt đó sẽ thoả mãn đề bài.\n",
-        " - Đạt được và không tồn tại cà rốt có khổi lượng lẻ - ta có thể chia tất cả củ cà rốt cho 2 mà không thay đổi tính chất bài toán - tới khi tồn tại củ cà rốt có khổi lượng lẻ.\n",
+        " - Đạt được và không tồn tại cà rốt có khối lượng lẻ - ta có thể chia khối lượng tất cả củ cà rốt cho 2 mà không thay đổi tính chất bài toán - tới khi tồn tại củ cà rốt có khổi lượng lẻ.\n",
         "\n",
         "### 2.4. Tối ưu - $O(\\frac{n^2 * W}{64})$:\n",
         "Việc xét trường hợp không đóng góp đáng kể vào thời gian chạy, nên bước tính knapsack là tốn thời gian nhất, ta có thể tối ưu bằng dùng bitset ở C++ hoặc dùng một biến int ở python để biểu diễn mảng DP, tốc độ nhanh hơn khoảng $log(10^{18}) \\approx 64$.\n",
@@ -291,7 +291,7 @@
         "### 2.1. Bruteforce - $O(2^{n*m})$:\n",
         "Xét tất cả cấu hình bomb có thể - mỗi ô có 2 lựa chọn có bomb hoặc không.\n",
         "### 2.2. Tối ưu:\n",
-        "Tại mỗi ô, gọi u là số lượng bomb kề cạnh chưa tìm ra, v là số lượng ô kề chưa xác định, nếu v bằng 0 - các ô kề chưa xác định không chứa bomb, nếu v bằng u - các ô kề chưa xác định đều chứa bomb. Chạy cho tới khi xác định được tất cả ô.\n",
+        "Tại mỗi ô, gọi u là số lượng bomb kề cạnh chưa tìm ra, v là số lượng ô kề chưa xác định, nếu v bằng 0 - các ô kề chưa xác định không chứa bomb, nếu v bằng u - các ô kề chưa xác định đều chứa bomb. Lặp lại cho tới khi xác định được tất cả ô.\n",
         "## 3. Code python 3:\n",
         ">```python\n",
         ">from sys import stdin, stdout\n",
