--- a/kick-off.ipynb
+++ b/kick-off.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMTfA13xa4K1aIXwqpAUwwR",
+      "authorship_tag": "ABX9TyMG96cGprepUP5bxeleQKLM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "Với độ dài 10 và 26 ký tự khác biệt, ta có thể coi 1 từ như một số có cơ số 26 và độ dài nhiều nhất là 10 ($\\approx 26^{10}$ số khác nhau). Từ đó tính trước tất cả từ có thể tồn tại và sau đó kiểm tra với mỗi từ được cho.\n",
         "### 2.3. Nhận xét thêm - $O(n * m * 10)$ - Bộ nhớ $O(n * m)$:\n",
         "Thay vì ta tính với tất cả độ dài, ta tính với số có độ dài 10 trước, sau đó tính số độ dài 9 bằng cách bỏ đi chữ số đầu hoặc chữ số đuôi, cũng như xoá đi các số đã được tính trước đó, giảm bớt bộ nhớ cần thiết. Khi kiểm tra, ta cũng chia các từ cần kiểm tra theo độ dài.\n",
-        "### 3. Code python 3:\n",
+        "## 3. Code python 3:\n",
         ">```python\n",
         ">from sys import stdin, stdout\n",
         ">import math\n",
