--- a/kick-off.ipynb
+++ b/kick-off.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMG96cGprepUP5bxeleQKLM",
+      "authorship_tag": "ABX9TyM8/vkhbrwcm8GobZVOqXAr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "Với độ dài 10 và 26 ký tự khác biệt, ta có thể coi 1 từ như một số có cơ số 26 và độ dài nhiều nhất là 10 ($\\approx 26^{10}$ số khác nhau). Từ đó tính trước tất cả từ có thể tồn tại và sau đó kiểm tra với mỗi từ được cho.\n",
         "### 2.3. Nhận xét thêm - $O(n * m * 10)$ - Bộ nhớ $O(n * m)$:\n",
         "Thay vì ta tính với tất cả độ dài, ta tính với số có độ dài 10 trước, sau đó tính số độ dài 9 bằng cách bỏ đi chữ số đầu hoặc chữ số đuôi, cũng như xoá đi các số đã được tính trước đó, giảm bớt bộ nhớ cần thiết. Khi kiểm tra, ta cũng chia các từ cần kiểm tra theo độ dài.\n",
-        "## 3. Code python 3:\n",
+        "### 3. Code python 3:\n",
         ">```python\n",
         ">from sys import stdin, stdout\n",
         ">import math\n",
@@ -103,6 +103,7 @@
         ">\n",
         ">write(''.join(res) + '\\n')\n",
         ">```\n",
+        "\n",
         "# **[True Expression](https://khmt.uit.edu.vn/wecode/algobootcamp/practice/show/89)**\n",
         "## 1. Tóm tắt:\n",
         "Cho dãy N số từ 1 đến N và số nguyên dương S. Hãy thêm dấu \"+\" hoặc \"-\" trước mỗi số để biểu thức được tạo ra có kết quả là S.\n",
@@ -134,6 +135,7 @@
         ">            res[i] = '-'\n",
         ">    write(''.join(res) + '\\n')\n",
         ">```\n",
+        "\n",
         "# **[Top K Hits](https://khmt.uit.edu.vn/wecode/algobootcamp/practice/show/90)**\n",
         "## 1. Tóm tắt:\n",
         "Cho mảng A ban đầu các phần tử là 0. Có 2 thao tác:\n",
@@ -233,6 +235,7 @@
         ">        for i in range(k):\n",
         ">            write(str(seg[1][i][1]) + ('\\n' if i == k - 1 else ' '))\n",
         ">```\n",
+        "\n",
         "# **[Splitting Carrots](https://khmt.uit.edu.vn/wecode/algobootcamp/practice/show/91)**\n",
         "## 1. Tóm tắt:\n",
         "Cho N cà rốt, mỗi củ có khối lượng $A_i$, tìm cách lấy ra ít nhất các củ cà rốt sao cho không có cách để chia ra 2 phần có tổng khối lượng bằng nhau.\n",
@@ -284,6 +287,7 @@
         ">        i += 1\n",
         ">    write('1\\n' + str(p + 1) + '\\n')\n",
         ">```\n",
+        "\n",
         "# **[Minesweeper](https://khmt.uit.edu.vn/wecode/algobootcamp/practice/show/92)**\n",
         "## 1. Tóm tắt:\n",
         "Cho một ma trận chứ thông tin về số lượng bomb ở các ô kề bên (4 ô kề cạnh). Hãy tìm ra ma trận cấu hình bomb (dữ liệu đảm bảo tồn tại đáp án).\n",
